# local-home-devices-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  .semgrep.yml  AGENTS.md  CHANGELOG.md  Dockerfile  LICENSE  README.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  server.py  todo.md
.github/: ci-cd-config.yaml  dependabot.yml
.github/workflows/: auto-tag.yml  ci.yml  publish.yml  semgrep-scheduled.yml  semgrep.yml
.omo/: boulder.json
.omo/evidence/: task-1-manifests-present.txt  task-3-motion-config-failure.txt  task-3-motion-config-success.txt  task-4-event-triggers-success.txt  task-5-alarm-server-empty.txt  task-5-alarm-server-success.txt  task-6-save-snapshot-failure.txt  task-6-save-snapshot-success.txt  task-7-call-events-empty.txt  task-7-call-events-success.txt
.omo/plans/: hikvision-diagnostic-tools.md
.omo/run-continuation/: ses_162ea30cbffeiNDhUUt3pQXDlV.json
docs/: README.md
tests/: __init__.py  conftest.py  fixtures.py
tests/e2e/: __init__.py  conftest.py  test_config_workflows.py  test_hikvision_workflow.py  test_openhasp_workflow.py  test_server_api.py
tests/integration/: __init__.py  conftest.py  test_config_live.py  test_config_replay.py  test_config_tools.py  test_hikvision_tools.py  test_openhasp_tools.py  test_real_tools.py
tests/mock_data/: mock_responses.py  openbk_115_status0.json  tasmota_109_status0.json
tests/smoke/: __init__.py  conftest.py  test_config_tools.py  test_connectivity.py  test_critical_tools.py  test_hikvision_diagnostic.py  test_mcp_transport.py
tests/unit/: __init__.py  conftest.py  test_constants.py  test_http_session.py  test_iot_config.py  test_iot_control.py  test_iot_devices.py  test_iot_discovery.py  test_iot_hikvision.py  test_iot_meta.py  test_iot_mqtt.py  test_iot_tuya.py  test_middleware.py  test_openhasp.py  test_transports.py  test_validators.py
tools/: __init__.py  __main__.py  constants.py  http_session.py  iot_config.py  iot_control.py  iot_devices.py  iot_discovery.py  iot_hikvision.py  iot_meta.py  iot_mqtt.py  iot_openhasp.py  iot_tuya.py  validators.py
tools/hikvision/: __init__.py  docker_client.py  isapi_client.py
tools/middleware/: auth.py  logging_mw.py  rate_limit.py
tools/openhasp/: __init__.py  diagnostics.py  http_client.py  telnet.py
