[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "local-home-devices-mcp"
version = "1.5.0"
description = "MCP server for local home device management: Tasmota, OpenBK, Tuya, OpenHASP, and Hikvision"
requires-python = ">=3.11"
dependencies = [
    "defusedxml>=0.7.1",
    "fastmcp>=2.0.0,<4.0.0",
    "requests>=2.28.0",
    "starlette>=0.27.0",
    "uvicorn>=0.22.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
mqtt = [
    "paho-mqtt>=1.6.0",
]
tuya = [
    "tinytuya>=1.15.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.10.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.5.0",
    "mypy>=1.8.0",
    "bandit>=1.7.0",
]

[project.scripts]
local-home-devices-mcp = "server:main"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.mypy]
strict = true
python_version = "3.14"

[[tool.mypy.overrides]]
module = ["tools.iot_tuya"]
disable_error_code = [
    "assignment",
    "dict-item",
    "import-untyped",
    "no-any-return",
    "union-attr",
    "var-annotated",
]

[tool.bandit]
exclude_dirs = ["tests", ".venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, mocked, zero I/O)",
    "integration: Integration tests (slow, requires real MQTT broker and devices)",
    "smoke: Smoke tests (quick health check, requires local MCP server)",
    "e2e: End-to-end tests (full pipeline, requires local MCP server)",
]

[tool.coverage.run]
source = ["tools"]
omit = [
    "tools/openhasp/*.py",
    "tools/hikvision/docker_client.py",
]

[tool.coverage.report]
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "@mcp.tool",
    "def register_.*_tools",
    "except Exception as exc:",
    "except ValidationError as exc:",
    "@inject_tool_risk_prefix",
    "start_tool_context\\(\\)",
    "increment_tool_count\\(",
    "check_write_enabled\\(\\)",
]
